# agentic-rust

./: .env.example  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  audit_log.md  config 3.toml
src/: agent.rs  config.rs  lib.rs  main.rs  tool.rs
tests/: integration_tests.rs
