[package]
name = "elegant-pythagoras"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
clap = { version = "4.4", features = ["derive"] }
dotenvy = "0.15"
dialoguer = "0.11"
colored = "2.1"
rig-core = "0.36.0"
async-trait = "0.1"
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.8"
